--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
     "react-photo-album": "^3.1.0",
     "react-redux": "^9.2.0",
