--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-otp-input": "^3.1.1",
     "react-photo-album": "^3.1.0",
     "react-redux": "^9.2.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.0",
