--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -38,13 +38,14 @@
     "keen-slider": "^6.8.6",
     "lucide": "^0.511.0",
     "lucide-react": "^0.511.0",
-    "next": "15.3.2",
+    "next": "15.4.5",
     "next-auth": "^4.24.11",
     "next-i18next": "^15.4.2",
-    "react": "^19.0.0",
+    "next-intl": "^4.3.4",
+    "react": "19.1.1",
     "react-datepicker": "^8.4.0",
     "react-day-picker": "^9.8.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
@@ -53,6 +54,7 @@
     "react-otp-input": "^3.1.1",
     "react-photo-album": "^3.1.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "swiper": "^11.2.8",
@@ -65,14 +67,18 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2",
+    "eslint-config-next": "15.4.5",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.7",
     "tw-animate-css": "^1.3.0",
     "typed-intl": "^1.0.3",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7"
   }
 }
