--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-photo-album": "^3.1.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "swiper": "^11.2.8",
